--- a/src/components/Panel/index.scss
+++ b/src/components/Panel/index.scss
@@ -21,6 +21,7 @@
     @include breakpoint(small) {
       order: 2;
       padding: 10px;
+      width: calc(100% - 20px);
     }
   }
 
